# Courses_work_3

./: .gitignore  README.md  main.py  pyproject.toml
src/: Functions.py  functions.py
tests/: test_functions.py
tests/data/: test_conclusion_data.json  test_formatted_operation.json  test_load_data.json  test_sort_data.json  test_sorted_data.json
utils/: functions.py
